--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./styles.css" />
   <body>
     <main>
-      <h1 class="heading">chuck norris</h1>
+      <h1 class="heading">chuck norris <span>joke generator</span></h1>
       <div class="form-group">
         <div class="form-control">
           <input type="radio" name="radio" id="all" checked />
