--- a/index.html
+++ b/index.html
@@ -79,10 +79,12 @@
           <label for="travel">travel</label>
         </div>
       </div>
+      <span class="category">all jokes</span>
       <div class="container">
         <div>
           <img src="./chuck.png" alt="Chuck Norris" />
           <button class="btn" type="button">make me laugh chuck!</button>
+
           <p class="content"></p>
         </div>
       </div>
