added chuck norris favicon

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Random Jokes</title>
+    <link rel="stylesheet" href="./styles.css" />
+    <link
+      id="favicon"
+      rel="shortcut icon"
+      type="image/png"
+      href="https://assets.chucknorris.host/img/avatar/chuck-norris.png"
+    />
   </head>
-  <link rel="stylesheet" href="./styles.css" />
   <body>
     <main>
       <h1 class="heading">chuck norris <span>joke generator</span></h1>
